--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Temporary Items
 /nbproject/private/
 application/views/templates/footer.php
 application/config/database.php
+application/config/database.php
