--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ Temporary Items
 application/views/templates/footer.php
 application/config/database.php
 application/config/database.php
+application/config/database.php
